[package]
name = "async-delay"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4.31"}
wasm-bindgen = { version = "0.2.83"}
web-sys = { version = "0.3", features = [ "Window" ] }

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }

